force-app/main/default/objects/DMAPP__DM_Political_Map_Contact__c/DMAPP__DM_Political_Map_Contact__c.object-meta.xml
<CustomObject>
    <description>PICKLIST CONFIGURATION

This object contains an entry for each node on the Relationship Map associated with an Opportunity. The picklist values for Adaptability and Your Status are configurable</description>
    <label>Relationship Map Contact</label>
    <nameField>
        <label>Political Map Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Map Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>