force-app/main/default/objects/DMAPP__DM_Political_Map_Contact__c/fields/DMAPP__Contact__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Contact__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationship Map Contacts (Contact)</relationshipLabel>
    <relationshipName>Political_Map_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>