force-app/main/default/objects/DMAPP__DM_Political_Map_Contact__c/fields/DMAPP__Coverage__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Coverage__c</fullName>
    <label>Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>Brief contact</fullName>
            </value>
            <value>
                <fullName>Multiple contacts</fullName>
            </value>
            <value>
                <fullName>In-depth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>