force-app/main/default/objects/DMAPP__DM_Political_Map_Contact__c/fields/DMAPP__Key_Player__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Key_Player__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox field is set for a Political Map Contact who has been added as a Key Player to the Decision Criteria page.</inlineHelpText>
    <label>Key Player</label>
    <type>Checkbox</type>
</CustomField>