force-app/main/default/objects/DMAPP__DM_Political_Map_Contact__c/fields/DMAPP__On_Bench__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__On_Bench__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Bench</label>
    <type>Checkbox</type>
</CustomField>