force-app/main/default/objects/DMAPP__DM_Political_Map_Contact__c/fields/DMAPP__Relationship_Weight__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Relationship_Weight__c</fullName>
    <formula>CASE(DMAPP__Status__c,
&apos;Unknown&apos;, 1,
&apos;Enemy&apos;, -5,
&apos;Non-Supporter&apos;, -3,
&apos;Neutral&apos;, 1,
&apos;Supporter&apos;, 3,
&apos;Mentor&apos;, 5,
1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>